src-ken&y/objects/Accounting_Default__c.object
<CustomObject>
    <customHelpPage>HelpAccountingDefaults</customHelpPage>
    <description>The default values for document lines, used to hold accounting segments for the COA</description>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Accounting Defaults</relationshipLabel>
        <relationshipName>Accounting_Defaults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Debit_Credit__c</fullName>
        <description>Debit or credit</description>
        <label>Debit/Credit</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default general ledger account.</description>
        <label>GL Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The GL account that you selected is inactive. Select an active GL account.</errorMessage>
            <filterItems>
                <field>GL_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Accounting Defaults</relationshipLabel>
        <relationshipName>Accounting_Defaults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intercompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Accounting Defaults (Intercompany)</relationshipLabel>
        <relationshipName>Interco_Accounting_Defaults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubTransaction_Type__c</fullName>
        <description>Select the sub transaction type for this accounting default</description>
        <label>SubTransaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Tax</fullName>
                </value>
                <value>
                    <fullName>Purchase Price Variance</fullName>
                </value>
                <value>
                    <fullName>Write Off</fullName>
                </value>
                <value>
                    <fullName>Earned Discount</fullName>
                </value>
                <value>
                    <fullName>Unearned Discount</fullName>
                </value>
                <value>
                    <fullName>Deduction</fullName>
                </value>
                <value>
                    <fullName>Overpayment</fullName>
                </value>
                <value>
                    <fullName>Work Order Assembly Completion</fullName>
                </value>
                <value>
                    <fullName>Work Order Assembly Scrap</fullName>
                </value>
                <value>
                    <fullName>Work Order Component Issue</fullName>
                </value>
                <value>
                    <fullName>Work Order Component Scrap</fullName>
                </value>
                <value>
                    <fullName>Cycle Count - Increase</fullName>
                </value>
                <value>
                    <fullName>Cycle Count - Decrease</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>On Account</fullName>
                </value>
                <value>
                    <fullName>Activate Proposed Costs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Select the transaction type for this accounting default</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipment</fullName>
                </value>
                <value>
                    <fullName>Customer Invoice</fullName>
                </value>
                <value>
                    <fullName>Customer Receipt</fullName>
                </value>
                <value>
                    <fullName>Purchase Receipt</fullName>
                </value>
                <value>
                    <fullName>Supplier Invoice</fullName>
                </value>
                <value>
                    <fullName>Supplier Payment</fullName>
                </value>
                <value>
                    <fullName>Supplier Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Customer Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Inventory Change</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Accounting Default</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Type__c</columns>
        <columns>SubTransaction_Type__c</columns>
        <columns>Debit_Credit__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{0000000000}</displayFormat>
        <label>Accounting Default</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Defaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>